apps/monitoring/loki/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loki
  namespace: monitoring
spec:
  entryPoints:
    - loki
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: loki
          port: 3100
